fix: reduced motion and some sizing on mobile

--- a/index.css
+++ b/index.css
@@ -67,12 +67,6 @@
     flex-shrink: 0;
 }
 
-/* Featured Action */
-
-.featured-action h3 {
-    text-align: center;
-}
-
 #header .tablet {
     display: none;
 }
@@ -124,6 +118,12 @@
     }
 }
 
+@media only screen and (max-width: 768px) {
+    div.featured {
+        font-size: 1rem;
+    }
+}
+
 /* End of Header */
 
 /* ===============
@@ -146,7 +146,7 @@
     margin: auto;
     font-size: 1.3em;
     padding: 3em 3em;
-    border-radius: 0.3em;
+    border-radius: 0.5em;
     border: var(--aside-border);
 }
 
@@ -183,18 +183,6 @@
     vertical-align: middle
 }
 
-#we-are-tbfighters .content {
-    text-align: center;
-    width: auto;
-    margin: 1.5em 1.5em;
-    padding: 1.5em 1.5em;
-    background: var(--bg);
-    position: relative;
-    z-index: 7;
-
-    border-radius: 0.3em;
-}
-
 @media only screen and (max-width: 1440px) {
     .info-sections .wrapper {
         font-size: 1em;
@@ -206,8 +194,8 @@
 @media only screen and (max-width: 768px) {
     .info-sections .wrapper {
         font-size: 1em;
-        width: 100%;
-        max-width: 95%
+        width: 90%;
+        padding: 1em 1em;
     }
 
     .info-sections .wrapper-columns {
@@ -235,7 +223,7 @@
     }
 
     .content p {
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
 
 
